prod_snapshot_2015-09-24_1030/objects/Operator__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>ISR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Nickname__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_Extension__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ISR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>